Bug 427916 - User Feedback string about "Account configured in KMail" is misleading
Summary: User Feedback string about "Account configured in KMail" is misleading
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-18 11:39 UTC by Luca Weiss
Modified: 2020-10-18 17:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Weiss 2020-10-18 11:39:40 UTC
SUMMARY
In the KMail settings Misc -> User Feedback when the slider is on the 2 most-right positions the string "Account configured in KMail (receiver and sender)." gets displayed.
This would suggest that details about the configured accounts (such as name, addresses, etc) get sent as part of the feedback but in reality it is just the type and the number of times they are configured (in my case 3x imap, 1x maildir, 3x sender).

I would rephrase the string so it's more clear: 
"Number and type of accounts configured in KMail (receiver and sender)."

The string is found at src/userfeedback/accountinfosource.cpp (line 27)
Comment 1 Laurent Montel 2020-10-18 17:52:46 UTC
Git commit 77cba9fed7d9041816481748100de3a5c3333130 by Laurent Montel.
Committed on 18/10/2020 at 17:52.
Pushed by mlaurent into branch 'master'.

Fix Bug 427916 - User Feedback string about "Account configured in KMail" is misleading
FIXED-IN: 5.16.0

M  +1    -1    src/userfeedback/accountinfosource.cpp

https://invent.kde.org/pim/kmail/commit/77cba9fed7d9041816481748100de3a5c3333130