Fix Bug 427916 - User Feedback string about "Account configured in KMail" is misleading

BUG: 427916
FIXED-IN: 5.16.0