src/userfeedback/accountinfosource.cpp
@@ -24,7 +24,7 @@ QString AccountInfoSource::name() const
 
 QString AccountInfoSource::description() const
 {
-    return i18n("Account configured in KMail (receiver and sender).");
+    return i18n("Number and type of accounts configured in KMail (receiver and sender).");
 }
 
 QVariant AccountInfoSource::data()
